cleaned up spacing issues

--- a/css/sitestylesheet.css
+++ b/css/sitestylesheet.css
@@ -1,12 +1,16 @@
 /* Global styles */
 
-.section {border: 2px solid red;}
+/*.section {border: 2px solid red;}*/
 
 body {margin: 0;
       padding-top: 10px;
       font-family: "Droid Serif", serif;
       line-height: 1.5rem;
       color: hsla(29, 43%, 8%, 1);}
+
+div {
+  padding: 0%;
+}
 
 h1, h2, h3, h4 {font-family: "Oswald", sans-serif;}
 h2 {color: hsla(76, 36%, 29%, 1);}
@@ -23,8 +27,17 @@ header img {width: 80px;
 header h1 { padding-top: 5px;
             color: hsla(35, 56%, 15%, 1);}
 
+
+/*tighten up space between rows in header */
+header div.col{ margin: 0px;}
+header div.section.group{background-color: hsla(76, 36%, 50%, 1);}
+
 header div.section:first-of-type {background-color: white;
-                                  padding-left: 30px;}
+                                  padding-left: 30px;
+                                  padding-bottom: 1%;}
+
+/*tighten up space between rows in header */
+header div nav ul{ margin: 0px;}
 
 header div nav.subnav:last-of-type {background-color: hsla(79, 60%, 90%, 1);}
 
@@ -37,8 +50,11 @@ header a:link {text-decoration: none;}
 header nav:not(.subnav) a:link {color: hsla(360, 100%, 100%, 1);}
 header nav:not(.subnav) a:visited {color: hsla(360, 100%, 100%, 0.5);}
 
+  
+
 header nav.subnav a:link {color: hsla(76, 36%, 29%, 1);}
 header nav.subnav a:visited {color: hsla(76, 36%, 29%, 0.2);}
+
 
 header li a:hover {color: orange;}
 
@@ -122,7 +138,9 @@ aside ul li { font-size: 0.8rem;
 
 
 /* Footer styles */
-
+/*footer div.section.group{background-color: hsla(76, 36%, 50%, 1);} */
 footer {background-color: hsla(79, 60%, 90%, 1);
-        padding-left: 30px;
+        /*padding-left: 30px;*/
         font-size: 0.8rem;}
+footer p{
+  padding-left: 30px; }
